--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "firebase": "^11.7.3",
     "next": "15.3.2",
     "react": "^19.0.0",
