--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.7.3",
     "next": "15.3.2",
     "react": "^19.0.0",
